--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1566,6 +1566,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pub=https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp=sharing}
 }
 
+@inproceedings{rekavandi2024certified,
+  author={Rekavandi, Aref Miri and Farokhi, Farhad and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
+  title={Certified Adversarial Robustness via Randomized alpha-Smoothing for Regression Models},
+  year={2024},
+  notes={Accepted},
+  booktitle={Advances in Neural Information Processing Systems},
+  series={NeurIPS},
+  presort={01}
+}
+
 @inproceedings{cullen2024et,
   title={Et Tu Certifications: Robustness Certificates Yield Better Adversarial Examples},
   author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
@@ -1573,7 +1583,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 41st International Conference on Machine Learning},
   series={ICML},
   note={Accepted},
-  presort={01},
+  presort={02},
   rmdnote={pdf=https://arxiv.org/abs/2302.04379;vid=https://www.youtube.com/watch?v=Rm3fwkGzzy0}
 }
 
@@ -1584,7 +1594,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 2024 ACM SIGSAC Conference on Computer and Communications Security},
   series={CCS},
   note={Accepted},
-  presort={02},
+  presort={03},
   rmdnote={pdf=https://arxiv.org/abs/2401.17628}
 }
 
@@ -1595,7 +1605,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={2024 IEEE Symposium on Security and Privacy},
   series={SP},
   note={Accepted},
-  presort={03},
+  presort={04},
   rmdnote={pdf=https://arxiv.org/abs/2309.11005}
 }
 
@@ -1606,7 +1616,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NAACL},
   note={Accepted},
   year={2024},
-  presort={04},
+  presort={05},
   rmdnote={alert=Selected as Oral (15% of accepted papers);pdf=https://arxiv.org/abs/2404.02393}
 }
 
@@ -1617,7 +1627,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2024},
   pages={996--1010},
   volume={12},
-  presort={05},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/abs/2405.11575}
 }
 
@@ -1627,7 +1637,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Findings of the Association for Computational Linguistics: EMNLP 2024},
   year={2024},
   note={Accepted},
-  presort={06},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/abs/2408.00728}
 }
 
@@ -1639,7 +1649,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 17th ACM Workshop on Security and Artificial Intelligence},
   series={AISec},
   note={Accepted; co-located with CCS2024},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
 
@@ -1650,7 +1660,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Accepted},
   booktitle={37th Australasian Joint Conference on Artificial Intelligence},
   series={AJCAI},
-  presort={08}
+  presort={09}
 }
 
 @inproceedings{oetomo24warm,
@@ -1660,7 +1670,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={2024 IEEE 16th International Conference on Data Mining},
   series={ICDM},
   note={Accepted},
-  presort={09}
+  presort={10}
 }
 
 @misc{marchant2024adaptive,
@@ -1669,7 +1679,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.13375 [cs.CL]},
   year={2024},
   month={May},
-  presort={10},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2405.13375}
 }
 
@@ -1679,7 +1689,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2404.19597 [cs.CL]},
   year={2024},
   month={May},
-  presort={11},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
@@ -1689,6 +1699,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.08892 [cs.LG]},
   year={2024},
   month={May},
-  presort={12},
+  presort={13},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
