Repo for EMNLP24

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1638,7 +1638,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2024},
   note={Accepted},
   presort={07},
-  rmdnote={pdf=https://arxiv.org/abs/2408.00728}
+  rmdnote={pdf=https://arxiv.org/abs/2408.00728;code=https://github.com/Dovermore/nlp-smoothing-software}
 }
 
 @inproceedings{jin2024getting,
