--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 <img src="images/ben1.jpg" style="width:30%; border:12px solid; margin-right: 24px" align="left">
 
 **Benjamin I. P. Rubinstein**, PhD (Berkeley)<br> 
-<p style="font-size:16px">Professor & AI co-lead, _School of Computing and Information Systems_<br>
+<p style="font-size:16px">Professor in AI, _School of Computing and Information Systems_<br>
 Deputy Dean Research (Interim), _Faculty of Engineering and Information Technology_<br>
 _The University of Melbourne, Australia_</p>
 
