--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1702,3 +1702,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={13},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
+
+@inproceedings{liu2025multilevel,
+  author={Liu, Shijie and Cullen, Andrew C. and Montague, Paul and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
+  title={Multi-level Certified Defense Against Poisoning Attacks in Offline Reinforcement Learning},
+  year={2025},
+  note={Accepted},
+  booktitle={The Thirteenth International Conference on Learning Representations},
+  series={ICLR},
+  presort={01}
+}
