--- a/index.Rmd
+++ b/index.Rmd
@@ -17,10 +17,10 @@ knitr::opts_chunk$set(echo = TRUE)
 
 **Benjamin I. P. Rubinstein**, PhD (Berkeley)<br> 
 <p style="font-size:16px">Professor in AI, _School of Computing and Information Systems_<br>
-Deputy Dean Research (Interim), _Faculty of Engineering and Information Technology_<br>
+Deputy Dean (Research), _Faculty of Engineering and Information Technology_<br>
 _The University of Melbourne, Australia_</p>
 
-I actively research topics in machine learning, particularly security and privacy implications of AI, such as adversarial learning, differential privacy and record linkage. Prior to joining the University of Melbourne in 2013, I enjoyed four years in industry research labs including Microsoft Research Silicon Valley and IBM Research Australia, and received the PhD (Computer Science) from UC Berkeley in 2010. I'm currently a full professor and interim Deputy Dean (Research), and was Associate Dean (Research) 2020--2023. I have been part of teams that have: analysed privacy at the Australian Bureau of Statistics, National Australia Bank, and Transport for NSW; robustness of translation systems to data poisoning attacks with Facebook (Meta); helped identify and plug side-channel attacks against the Firefox browser; deanonymised Victorian Myki transport data and an unprecedented Australian Medicare data release, prompting introduction of the Re-identification Offence Bill 2016; developed scalable Bayesian approaches to record linkage tested by U.S. Census; and shipped production systems for record linkage in Bing and the Xbox360. Since joining Melbourne in 2013, I have been awarded 
+I actively research topics in machine learning, particularly security and privacy implications of AI, such as adversarial learning, differential privacy and record linkage. Prior to joining the University of Melbourne in 2013, I enjoyed four years in industry research labs including Microsoft Research Silicon Valley and IBM Research Australia, and received the PhD (Computer Science) from UC Berkeley in 2010. I'm currently a full professor and Deputy Dean (Research), and was Associate Dean (Research) 2020--2023. I have been part of teams that have: analysed privacy at the Australian Bureau of Statistics, National Australia Bank, and Transport for NSW; robustness of translation systems to data poisoning attacks with Facebook (Meta); helped identify and plug side-channel attacks against the Firefox browser; deanonymised Victorian Myki transport data and an unprecedented Australian Medicare data release, prompting introduction of the Re-identification Offence Bill 2016; developed scalable Bayesian approaches to record linkage tested by U.S. Census; and shipped production systems for record linkage in Bing and the Xbox360. Since joining Melbourne in 2013, I have been awarded 
 ```{r funding, echo=FALSE, results="asis"}
 FT <- read.csv("funding/funding.csv")
 
