--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1416,9 +1416,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Advances in Neural Information Processing Systems},
   series={NeurIPS},
   year={2023},
-  note={Accepted},
+  pages={18676--18711},
   presort={01},
-  rmdnote={pdf=https://arxiv.org/abs/2302.01757;pub=https://neurips.cc/virtual/2023/poster/70896;code=https://github.com/Dovermore/randomized-deletion}
+  rmdnote={pdf=https://arxiv.org/abs/2302.01757;pub=https://proceedings.neurips.cc/paper_files/paper/2023/hash/3ba82362eb0aa75487069f19fde794fe-Abstract-Conference.html;code=https://github.com/Dovermore/randomized-deletion}
 }
 
 @inproceedings{he2023mitigating,
@@ -1448,8 +1448,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
   journal={IEEE Transactions on Knowledge and Data Engineering},
   year={2023},
-  note={Accepted},
-  pages={18},
+  pages={12855--12872},
+  volume={35},
+  number={12},
   presort={04},
   rmdnote={pub=https://ieeexplore.ieee.org/document/10113193;full=https://arxiv.org/abs/2108.10130}
 }
@@ -1551,7 +1552,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Zhang, Ruihan and Miller, Tim and Ehinger, Krista and Rubinstein, Benjamin},
   booktitle={Proceedings of the IJCAI 2023 Workshop on XAI},
   year={2023},
-  notes = {Co-located with IJCAI. Accepted},
+  notes = {Co-located with IJCAI},
   presort={13},
   rmdnote={pub=https://drive.google.com/file/d/1YCm5xVpvbMzfOoiiEWpTffuhkhKZsI7O/view?usp=sharing}
 }
@@ -1561,7 +1562,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Zhang, Ruihan and Miller, Tim and Ehinger, Krista and Rubinstein, Benjamin},
   booktitle={Proceedings of the IJCAI 2023 Workshop on XAI},
   year={2023},
-  notes = {Co-located with IJCAI. Accepted},
+  notes = {Co-located with IJCAI},
   presort={14},
   rmdnote={pub=https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp=sharing}
 }
@@ -1570,10 +1571,11 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Rekavandi, Aref Miri and Farokhi, Farhad and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
   title={Certified Adversarial Robustness via Randomized alpha-Smoothing for Regression Models},
   year={2024},
-  notes={Accepted},
   booktitle={Advances in Neural Information Processing Systems},
   series={NeurIPS},
-  presort={01}
+  presort={01},
+  pages={134127--134150},
+  rmdnote={pub=https://proceedings.neurips.cc/paper_files/paper/2024/hash/f21a76d688be0553c943a6b6c1d4bb1f-Abstract-Conference.html},
 }
 
 @inproceedings{cullen2024et,
@@ -1582,9 +1584,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2024},
   booktitle={Proceedings of the 41st International Conference on Machine Learning},
   series={ICML},
-  note={Accepted},
+  pages={9745--9761},
   presort={02},
-  rmdnote={pdf=https://arxiv.org/abs/2302.04379;vid=https://www.youtube.com/watch?v=Rm3fwkGzzy0}
+  rmdnote={pdf=https://arxiv.org/abs/2302.04379;vid=https://www.youtube.com/watch?v=Rm3fwkGzzy0;pub=https://proceedings.mlr.press/v235/cullen24a.html}
 }
 
 @inproceedings{jin2024elephants,
@@ -1593,9 +1595,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2024},
   booktitle={Proceedings of the 2024 ACM SIGSAC Conference on Computer and Communications Security},
   series={CCS},
-  note={Accepted},
+  pages={1909--1923},
   presort={03},
-  rmdnote={pdf=https://arxiv.org/abs/2401.17628}
+  rmdnote={pdf=https://arxiv.org/abs/2401.17628;pub=https://dl.acm.org/doi/10.1145/3658644.3670281}
 }
 
 @inproceedings{cullen2023its,
@@ -1604,9 +1606,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2024},
   booktitle={2024 IEEE Symposium on Security and Privacy},
   series={SP},
-  note={Accepted},
+  pages={2886--2900},
   presort={04},
-  rmdnote={pdf=https://arxiv.org/abs/2309.11005}
+  rmdnote={pdf=https://arxiv.org/abs/2309.11005;pub=https://ieeexplore.ieee.org/document/10646689}
 }
 
 @inproceedings{wang2024backdoor,
@@ -1614,10 +1616,10 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Wang, Jun and Xu, Qiongkai and He, Xuanli and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   booktitle={Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
   series={NAACL},
-  note={Accepted},
+  pages={4515--4534},
   year={2024},
   presort={05},
-  rmdnote={alert=Selected as Oral (15% of accepted papers);pdf=https://arxiv.org/abs/2404.02393}
+  rmdnote={alert=Selected as Oral (15% of accepted papers);pdf=https://arxiv.org/abs/2404.02393;pub=https://aclanthology.org/2024.naacl-long.254/}
 }
 
 @article{he2024seep,
@@ -1636,9 +1638,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Huang, Zhuoqun and Marchant, Neil G. and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
   booktitle={Findings of the Association for Computational Linguistics: EMNLP 2024},
   year={2024},
-  note={Accepted},
+  pages={10813--10835},
   presort={07},
-  rmdnote={pdf=https://arxiv.org/abs/2408.00728;code=https://github.com/Dovermore/nlp-smoothing-software}
+  rmdnote={pdf=https://arxiv.org/abs/2408.00728;code=https://github.com/Dovermore/nlp-smoothing-software;pub=https://aclanthology.org/2024.findings-emnlp.635/}
 }
 
 @inproceedings{jin2024getting,
@@ -1648,16 +1650,17 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2024},
   booktitle={Proceedings of the 17th ACM Workshop on Security and Artificial Intelligence},
   series={AISec},
-  note={Accepted; co-located with CCS2024},
+  pages={53--64},
+  note={co-located with CCS2024},
   presort={08},
-  rmdnote={pdf=https://arxiv.org/abs/2205.10159}
+  rmdnote={pdf=https://arxiv.org/abs/2205.10159;pub=https://dl.acm.org/doi/10.1145/3689932.3694761}
 }
 
 @inproceedings{joukhadar2024designing,
   author={Joukhadar, Zaher and Morgan, Jonathan and Bayliss, Christopher and Ortiz del Castillo, Miguel and McRobbie, Jack and Mearns, Robert and Ehinger, Krista A. and Rubinstein, Benjamin I. P. and Sinnott, Richard and Trenti, Michele and Bailey, James},
   title={Designing an Adaptive {AI} System for Operation on Board a Nano-satellite},
   year={2024},
-  note={Accepted},
+  note={In press},
   booktitle={37th Australasian Joint Conference on Artificial Intelligence},
   series={AJCAI},
   presort={09}
@@ -1669,7 +1672,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Oetomo, Bastian and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
   booktitle={2024 IEEE 16th International Conference on Data Mining},
   series={ICDM},
-  note={Accepted},
+  note={In press},
   presort={10}
 }
 
@@ -1710,5 +1713,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Accepted},
   booktitle={The Thirteenth International Conference on Learning Representations},
   series={ICLR},
-  presort={01}
+  presort={01},
+  rmdnote={pub=https://openreview.net/forum?id=X2x2DuGIbx}
 }
