--- a/group.Rmd
+++ b/group.Rmd
@@ -15,7 +15,6 @@ I am fortunate to supervise a brilliant group of researchers.
 
 ### PhD students
 
-* [Jun Wang](https://www.linkedin.com/in/jun-wang-15065b170/). (w Trevor Cohn 2020-- ). Adversarial learning for NLP.
 * [Shijie Liu](https://www.linkedin.com/in/shijie-liu-9162b8151/). (w Sarah Erfani, Paul Montague, Andrew Cullen 2021-- ). Certified robustness at training time.
 * [Zhuoqun (Calvin) Huang](https://github.com/Dovermore). (w Olya Ohrimenko, Neil Marchant 2021-- ). Certified robustness for discrete data.
 * [Jiankai Jin](https://jason-jiankai.github.io/). (w Olya Ohrimenko 2021-- ). Systems security of differential privacy.
@@ -26,6 +25,7 @@ I am fortunate to supervise a brilliant group of researchers.
 
 ### PhD students---Completed
 
+* [Jun Wang](https://www.linkedin.com/in/jun-wang-15065b170/). (w Trevor Cohn 2020-25). Adversarial learning for NLP.
 * [Guoxin Sun](https://www.linkedin.com/in/guoxin-sun-338888162/). (w Tansu Alpcan, Seyit Camtepe 2020--24). Adversarial learning/game theory for autonomous systems → Data scientist at Proa
 * [Ruihan Zhang](https://scholar.google.com/citations?user=gjSlsnQAAAAJ&hl=en) (w Tim Miller, Kris Ehinger 2019--24). Explainable AI →  Postdoc at the State Grid Corporation of China
 * [Malinga Perera](http://www.malinga.me/) (w Renata Borovica-Gajic 2018--23). Self-driving databases → Software engineer at Amazon Web Services
