TMLR and published info

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1658,12 +1658,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
 
 @inproceedings{joukhadar2024designing,
   author={Joukhadar, Zaher and Morgan, Jonathan and Bayliss, Christopher and Ortiz del Castillo, Miguel and McRobbie, Jack and Mearns, Robert and Ehinger, Krista A. and Rubinstein, Benjamin I. P. and Sinnott, Richard and Trenti, Michele and Bailey, James},
-  title={Designing an Adaptive {AI} System for Operation on Board a Nano-satellite},
+  title={Designing an Adaptive {AI} System for Operation on Board the {SpIRIT} Nano-Satellite},
   year={2024},
-  note={In press},
+  pages={329--341},
   booktitle={37th Australasian Joint Conference on Artificial Intelligence},
   series={AJCAI},
-  presort={09}
+  presort={09},
+  rmdnote={pub=https://link.springer.com/book/10.1007/978-981-96-0351-0}
 }
 
 @inproceedings{oetomo24warm,
@@ -1672,8 +1673,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Oetomo, Bastian and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
   booktitle={2024 IEEE 16th International Conference on Data Mining},
   series={ICDM},
-  note={In press},
-  presort={10}
+  pages={360--369},
+  presort={10},
+  rmdnote={pub=https://www.computer.org/csdl/proceedings-article/icdm/2024/066800a360/24w4sJvik3S}
 }
 
 @misc{marchant2024adaptive,
@@ -1696,16 +1698,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
-@misc{rekavandi24rsreg,
-  title={{RS-Reg}: {P}robabilistic and Robust Certified Regression Through Randomized Smoothing},
-  author={Rekavandi, Aref Miri and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
-  note={arXiv:2405.08892 [cs.LG]},
-  year={2024},
-  month={May},
-  presort={13},
-  rmdnote={pdf=https://arxiv.org/abs/2405.08892}
-}
-
 @inproceedings{liu2025multilevel,
   author={Liu, Shijie and Cullen, Andrew C. and Montague, Paul and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
   title={Multi-level Certified Defense Against Poisoning Attacks in Offline Reinforcement Learning},
@@ -1715,4 +1707,14 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={ICLR},
   presort={01},
   rmdnote={pub=https://openreview.net/forum?id=X2x2DuGIbx}
+}
+
+@article{rekavandi24rsreg,
+  title={{RS-Reg}: {P}robabilistic and Robust Certified Regression Through Randomized Smoothing},
+  author={Rekavandi, Aref Miri and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
+  journal={Transactions on Machine Learning Research},
+  note={Accepted},
+  year={2025},
+  presort={02},
+  rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
