ICML25 pubs, NCICS completion

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1698,6 +1698,28 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
+@inproceedings{cullen2025position,
+  title={Position: Certified Robustness Does Not (Yet) Imply Model Security},
+  author={Cullen, Andrew C. and Montague, Paul and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
+  year={2025},
+  booktitle={Proceedings of the 42nd International Conference on Machine Learning},
+  series={ICML},
+  presort={01},
+  note={Accepted},
+  rmdnote={alert=Selected as Oral}
+}
+
+@inproceedings{cullen2025ddad,
+  title={{DDAD}: A Two-Pronged Adversarial Defense Based on Distributional Discrepancy},
+  author={Zhang, Jiacheng and Rubinstein, Benjamin I. P. and Zhang, Jingfeng and Liu, Feng},
+  year={2025},
+  booktitle={Proceedings of the 42nd International Conference on Machine Learning},
+  series={ICML},
+  presort={02},
+  note={Accepted},
+  rmdnote={pdf=https://arxiv.org/abs/2503.02169}
+}
+
 @inproceedings{liu2025multilevel,
   author={Liu, Shijie and Cullen, Andrew C. and Montague, Paul and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
   title={Multi-level Certified Defense Against Poisoning Attacks in Offline Reinforcement Learning},
@@ -1705,7 +1727,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Accepted},
   booktitle={The Thirteenth International Conference on Learning Representations},
   series={ICLR},
-  presort={01},
+  presort={03},
   rmdnote={pub=https://openreview.net/forum?id=X2x2DuGIbx}
 }
 
@@ -1715,6 +1737,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={Transactions on Machine Learning Research},
   note={Accepted},
   year={2025},
-  presort={02},
+  presort={04},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
