--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1740,3 +1740,11 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={04},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
+
+@inproceedings{he2025tuba,
+  title={{TUBA}: Cross-Lingual Transferability of Backdoor Attacks in {LLMs} with Instruction Tuning},
+  author={He, Xuanli and Wang, Jun and Xu, Qiongkai and Minervini, Pasquale and Stenetorp, Pontus and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  year={2025},
+  booktitle={Findings of the Association for Computational Linguistics: ACL 2025},
+  presort={05}
+}
