--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1710,7 +1710,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
 }
 
 @inproceedings{cullen2025ddad,
-  title={{DDAD}: A Two-Pronged Adversarial Defense Based on Distributional Discrepancy},
+  title={One Stone, Two Birds: Enhancing Adversarial Defense Through the Lens of Distributional Discrepancy},
   author={Zhang, Jiacheng and Rubinstein, Benjamin I. P. and Zhang, Jingfeng and Liu, Feng},
   year={2025},
   booktitle={Proceedings of the 42nd International Conference on Machine Learning},
