--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1678,24 +1678,35 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pub=https://www.computer.org/csdl/proceedings-article/icdm/2024/066800a360/24w4sJvik3S}
 }
 
-@misc{marchant2024adaptive,
-  title={Adaptive Data Analysis for Growing Data},
-  author={Marchant, Neil G. and Rubinstein, Benjamin I. P.},
-  note={arXiv:2405.13375 [cs.CL]},
-  year={2024},
-  month={May},
-  presort={11},
-  rmdnote={pdf=https://arxiv.org/abs/2405.13375}
-}
-
 @misc{he2024transferring,
   title={Transferring Troubles: Cross-Lingual Transferability of Backdoor Attacks in LLMs with Instruction Tuning},
   author={He, Xuanli and Wang, Jun and Xu, Qiongkai and Minervini, Pasquale and Stenetorp, Pontus and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   note={arXiv:2404.19597 [cs.CL]},
   year={2024},
   month={May},
-  presort={12},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
+}
+
+@inproceedings{marchant2025adaptive,
+  title={Adaptive Data Analysis for Growing Data},
+  author={Marchant, Neil G. and Rubinstein, Benjamin I. P.},
+  year={2025},
+  booktitle={Advances in Neural Information Processing Systems},
+  series={NeurIPS},
+  note={Accepted},
+  presort={01},
+  rmdnote={pdf=https://arxiv.org/abs/2405.13375}
+}
+
+@inproceedings{huang2025adaptdel,
+  author={Huang, Zhuoqun and Marchant, Neil G. and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
+  title={{AdaptDel}: Adaptable Deletion Rate Randomized Smoothing for Certified Robustness},
+  year={2025},
+  booktitle={Advances in Neural Information Processing Systems},
+  series={NeurIPS},
+  note={Accepted},
+  presort={02}
 }
 
 @inproceedings{cullen2025position,
@@ -1704,7 +1715,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2025},
   booktitle={Proceedings of the 42nd International Conference on Machine Learning},
   series={ICML},
-  presort={01},
+  presort={03},
   note={Accepted},
   rmdnote={alert=Selected as Oral}
 }
@@ -1715,7 +1726,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2025},
   booktitle={Proceedings of the 42nd International Conference on Machine Learning},
   series={ICML},
-  presort={02},
+  presort={04},
   note={Accepted},
   rmdnote={pdf=https://arxiv.org/abs/2503.02169}
 }
@@ -1727,7 +1738,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Accepted},
   booktitle={The Thirteenth International Conference on Learning Representations},
   series={ICLR},
-  presort={03},
+  presort={05},
   rmdnote={pub=https://openreview.net/forum?id=X2x2DuGIbx}
 }
 
@@ -1737,7 +1748,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={Transactions on Machine Learning Research},
   note={Accepted},
   year={2025},
-  presort={04},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
 
@@ -1746,5 +1757,5 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={He, Xuanli and Wang, Jun and Xu, Qiongkai and Minervini, Pasquale and Stenetorp, Pontus and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   year={2025},
   booktitle={Findings of the Association for Computational Linguistics: ACL 2025},
-  presort={05}
+  presort={07}
 }
