arXiv fuzzing, updating published papers

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1715,47 +1715,60 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2025},
   booktitle={Proceedings of the 42nd International Conference on Machine Learning},
   series={ICML},
+  pages={81185--81198},
   presort={03},
-  note={Accepted},
-  rmdnote={alert=Selected as Oral}
+  rmdnote={alert=Selected as Oral;pub=https://proceedings.mlr.press/v267/cullen25a.html;pdf=https://raw.githubusercontent.com/mlresearch/v267/main/assets/cullen25a/cullen25a.pdf}
 }
 
-@inproceedings{cullen2025ddad,
+@inproceedings{zhang2025one,
   title={One Stone, Two Birds: Enhancing Adversarial Defense Through the Lens of Distributional Discrepancy},
   author={Zhang, Jiacheng and Rubinstein, Benjamin I. P. and Zhang, Jingfeng and Liu, Feng},
   year={2025},
   booktitle={Proceedings of the 42nd International Conference on Machine Learning},
   series={ICML},
+  pages={75951--75970},
   presort={04},
-  note={Accepted},
-  rmdnote={pdf=https://arxiv.org/abs/2503.02169}
+  rmdnote={pub=https://proceedings.mlr.press/v267/zhang25bn.html;pdf=https://raw.githubusercontent.com/mlresearch/v267/main/assets/zhang25bn/zhang25bn.pdf;code=https://github.com/tmlr-group/DAD}
 }
 
 @inproceedings{liu2025multilevel,
   author={Liu, Shijie and Cullen, Andrew C. and Montague, Paul and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
   title={Multi-level Certified Defense Against Poisoning Attacks in Offline Reinforcement Learning},
   year={2025},
-  note={Accepted},
-  booktitle={The Thirteenth International Conference on Learning Representations},
+  booktitle={International Conference on Representation Learning},
   series={ICLR},
+  pages = {44885--44905},
   presort={05},
-  rmdnote={pub=https://openreview.net/forum?id=X2x2DuGIbx}
+  rmdnote={pub=https://proceedings.iclr.cc/paper_files/paper/2025/hash/6f1914617c7be6783314a45b180ae5b7-Abstract-Conference.html;pdf=https://openreview.net/forum?id=X2x2DuGIbx}
 }
 
 @article{rekavandi24rsreg,
   title={{RS-Reg}: {P}robabilistic and Robust Certified Regression Through Randomized Smoothing},
   author={Rekavandi, Aref Miri and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
   journal={Transactions on Machine Learning Research},
-  note={Accepted},
   year={2025},
   presort={06},
-  rmdnote={pdf=https://arxiv.org/abs/2405.08892}
+  rmdnote={pub=https://openreview.net/forum?id=AcLlg4J52H;pdf=https://arxiv.org/abs/2405.08892;code=https://github.com/arekavandi/Certified_Robust_Regression}
 }
 
 @inproceedings{he2025tuba,
   title={{TUBA}: Cross-Lingual Transferability of Backdoor Attacks in {LLMs} with Instruction Tuning},
   author={He, Xuanli and Wang, Jun and Xu, Qiongkai and Minervini, Pasquale and Stenetorp, Pontus and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   year={2025},
+  pages={16504–16544},
   booktitle={Findings of the Association for Computational Linguistics: ACL 2025},
-  presort={07}
+  series={ACL},
+  presort={07},
+  rmdnote={pub=https://aclanthology.org/2025.findings-acl.848/}
 }
+
+@misc{yan2025dynamiq,
+  title={{DynamiQ}: Unlocking the Potential of Dynamic Task Allocation in Parallel Fuzzing},
+  author={Yan, Wenqi and Murray, Toby and Rubinstein, Benjamin I.P. and Pham, Van-Thuan},
+  note={arXiv:2510.04469 [cs.SE]},
+  year={2025},
+  month={Oct},
+  presort={08},
+  rmdnote={pdf=https://arxiv.org/abs/2510.04469}
+}
+
