WACV, Shijie & Calvin completions, some supervisee work updates

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1772,3 +1772,12 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2510.04469}
 }
 
+@inproceedings{bulychev2026where,
+  author={Bulychev, Maria and Marchant, Neil G. and Rubinstein, Benjamin I. P.},
+  title={Where is the Watermark? Interpretable Watermark Detection at the Block Level},
+  year={2026},
+  booktitle={Proceedings of the Winter Conference on Applications of Computer Vision},
+  series={WACV},
+  note={Accepted},
+  presort={01}
+}
