--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1706,7 +1706,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Advances in Neural Information Processing Systems},
   series={NeurIPS},
   note={Accepted},
-  presort={02}
+  presort={02},
+  rmdnote={pdf=https://arxiv.org/abs/2511.09316}
 }
 
 @inproceedings{cullen2025position,
