Enterprise AI book chapter

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1763,13 +1763,26 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pub=https://aclanthology.org/2025.findings-acl.848/}
 }
 
+@incollection{marchant2025data,
+  title={Data Privacy in Enterprise {AI}},
+  author={Marchant, Neil G. and Zhao, Ying and Rubinstein, Benjamin I. P. and Ohrimenko, Olga},
+  booktitle={Enterprise {AI}},
+  editor={Sadiq, Shazia},
+  pages={129--181},
+  year={2025},
+  publisher={Springer},
+  presort={08},
+  rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-032-01940-0_5}
+}
+
+
 @misc{yan2025dynamiq,
   title={{DynamiQ}: Unlocking the Potential of Dynamic Task Allocation in Parallel Fuzzing},
   author={Yan, Wenqi and Murray, Toby and Rubinstein, Benjamin I.P. and Pham, Van-Thuan},
   note={arXiv:2510.04469 [cs.SE]},
   year={2025},
   month={Oct},
-  presort={08},
+  presort={09},
   rmdnote={pdf=https://arxiv.org/abs/2510.04469}
 }
 
