--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1793,5 +1793,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the Winter Conference on Applications of Computer Vision},
   series={WACV},
   note={Accepted},
-  presort={01}
+  presort={01},
+  rmdnote={pdf=https://arxiv.org/abs/2512.14994}
 }
