--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1575,7 +1575,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NeurIPS},
   presort={01},
   pages={134127--134150},
-  rmdnote={pub=https://proceedings.neurips.cc/paper_files/paper/2024/hash/f21a76d688be0553c943a6b6c1d4bb1f-Abstract-Conference.html},
+  rmdnote={pub=https://proceedings.neurips.cc/paper_files/paper/2024/hash/f21a76d688be0553c943a6b6c1d4bb1f-Abstract-Conference.html;code=https://github.com/arekavandi/Certified_adv_RRegression/}
 }
 
 @inproceedings{cullen2024et,
@@ -1760,7 +1760,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Findings of the Association for Computational Linguistics: ACL 2025},
   series={ACL},
   presort={07},
-  rmdnote={pub=https://aclanthology.org/2025.findings-acl.848/}
+  rmdnote={pub=https://aclanthology.org/2025.findings-acl.848/;code=https://github.com/xlhex/tuba_acl2025}
 }
 
 @incollection{marchant2025data,
