--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1696,7 +1696,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NeurIPS},
   note={Accepted},
   presort={01},
-  rmdnote={pdf=https://arxiv.org/abs/2405.13375}
+  rmdnote={pdf=https://arxiv.org/abs/2405.13375;pub=https://neurips.cc/virtual/2025/loc/san-diego/poster/115261}
 }
 
 @inproceedings{huang2025adaptdel,
@@ -1707,7 +1707,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NeurIPS},
   note={Accepted},
   presort={02},
-  rmdnote={pdf=https://arxiv.org/abs/2511.09316}
+  rmdnote={pdf=https://arxiv.org/abs/2511.09316;pub=https://neurips.cc/virtual/2025/loc/san-diego/poster/118935}
 }
 
 @inproceedings{cullen2025position,
@@ -1786,6 +1786,15 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2510.04469}
 }
 
+@article{zhang26semantic,
+  title={Semantic-aware Adversarial Fine-tuning for {CLIP}},
+  author={Zhang, Jiacheng and Li, Jinhao and Huang, Hanxun and Erfani, Sarah Monazam and Rubinstein, Benjamin I. P. and Liu, Feng},
+  journal={Transactions on Machine Learning Research},
+  year={2026},
+  note={Accepted},
+  presort={01}
+}
+
 @inproceedings{bulychev2026where,
   author={Bulychev, Maria and Marchant, Neil G. and Rubinstein, Benjamin I. P.},
   title={Where is the Watermark? Interpretable Watermark Detection at the Block Level},
@@ -1793,6 +1802,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the Winter Conference on Applications of Computer Vision},
   series={WACV},
   note={Accepted},
-  presort={01},
+  presort={02},
   rmdnote={pdf=https://arxiv.org/abs/2512.14994}
 }
