--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1791,8 +1791,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Zhang, Jiacheng and Li, Jinhao and Huang, Hanxun and Erfani, Sarah Monazam and Rubinstein, Benjamin I. P. and Liu, Feng},
   journal={Transactions on Machine Learning Research},
   year={2026},
-  note={Accepted},
-  presort={01}
+  presort={01},
+  rmdnote={pdf=https://openreview.net/pdf?id=SzZOBzueK0;code=https://github.com/tmlr-group/SAFT}
 }
 
 @inproceedings{bulychev2026where,
